--- a/package.json
+++ b/package.json
@@ -2,23 +2,19 @@
   "name": "tinyapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "express_server.js",
   "scripts": {
+    "start": "./node_modules/nodemon/bin/nodemon.js -L express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/daniela-onc/tinyapp.git"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "[Daniela Oancea, danielaoancea2009@yahoo.ca]",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/daniela-onc/tinyapp/issues"
-  },
-  "homepage": "https://github.com/daniela-onc/tinyapp#readme",
   "dependencies": {
-    "ejs": "^3.1.3",
-    "express": "^4.17.1"
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
