--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "express_server.js",
   "scripts": {
-    "start": "./node_modules/nodemon/bin/nodemon.js -L express_server.js",
+    "start": "./node_modules/.bin/nodemon -L express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "[Daniela Oancea, danielaoancea2009@yahoo.ca]",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.5",
     "ejs": "^2.6.1",
     "express": "^4.16.3"
   },
