--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "[Daniela Oancea, danielaoancea2009@yahoo.ca]",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "2.0.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3"
   },
